# Tancodrom

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md
.run/: Tancodrom.run.xml
docs/html/: Camera_8h.html  Camera_8h.js  Camera_8h_source.html  Entity_8h.html  Entity_8h.js  Entity_8h_source.html  Helicopter_8h.html  Helicopter_8h.js  Helicopter_8h_source.html  House_8h.html  House_8h.js  House_8h_source.html  LightEmitter_8h.html  LightEmitter_8h.js  LightEmitter_8h_source.html  Mesh_8h.html  Mesh_8h_source.html  Model_8h.html  Model_8h.js  Model_8h_source.html  Moon_8h.html  Moon_8h.js  Moon_8h_source.html  ParticleSystem_8h.html  ParticleSystem_8h.js  ParticleSystem_8h_source.html  Particle_8h.html  Particle_8h.js  Particle_8h_source.html  Rocket_8h.html  Rocket_8h.js  Rocket_8h_source.html  Shader_8h.html  Shader_8h_source.html  Skybox_8h.html  Skybox_8h.js  Skybox_8h_source.html  Sun_8h.html  Sun_8h.js  Sun_8h_source.html  (+108 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_2.js  classes_3.js  classes_4.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  (+33 more)
docs/latex/: Camera_8h.tex  Camera_8h_source.tex  Entity_8h.tex  Entity_8h_source.tex  Helicopter_8h.tex  Helicopter_8h_source.tex  House_8h.tex  House_8h_source.tex  LightEmitter_8h.tex  LightEmitter_8h_source.tex  Mesh_8h.tex  Mesh_8h_source.tex  Model_8h.tex  Model_8h_source.tex  Moon_8h.tex  Moon_8h_source.tex  ParticleSystem_8h.tex  ParticleSystem_8h_source.tex  Particle_8h.tex  Particle_8h_source.tex  Rocket_8h.tex  Rocket_8h_source.tex  Shader_8h.tex  Shader_8h_source.tex  Skybox_8h.tex  Skybox_8h_source.tex  Sun_8h.tex  Sun_8h_source.tex  Tank_8h.tex  Tank_8h_source.tex  Terrain_8h.tex  Terrain_8h_source.tex  Texture_8h.tex  Texture_8h_source.tex  Vertex_8h.tex  Vertex_8h_source.tex  annotated.tex  classCamera.tex  classEntity.eps  classEntity.tex  (+27 more)
include/: Camera.h  Entity.h  Helicopter.h  House.h  LightEmitter.h  Mesh.h  Model.h  Moon.h  Particle.h  ParticleSystem.h  Rocket.h  Shader.h  Skybox.h  Sun.h  Tank.h  Terrain.h  Texture.h  Vertex.h  pch.h
lib/: pch.h
models/House/: house_damaged.mtl
models/Rocket/: rocket.mtl
models/Sun/: sun.mtl
models/Tank/: IS.mtl  tank.glb
models/Terrain/: Teren.mtl
shaders/: PhongFragment.glsl  ShadowMapDepthVertex.glsl  ShadowMapFragment.glsl  fragment_shader.glsl  vertex_shader.glsl
shaders/fire/: fire_fragment.glsl
shaders/moon-shaders/: moon-fragment.glsl  moon-vertex.glsl
shaders/particles/: particle_fragment.glsl  particle_vertex.glsl
shaders/skybox/: fragment.glsl  skybox_vertex.glsl
shaders/terrain/: vertex.glsl
src/: Camera.cpp  Entity.cpp  Helicopter.cpp  House.cpp  LightEmitter.cpp  Mesh.cpp  Model.cpp  Moon.cpp  Particle.cpp  ParticleSystem.cpp  Rocket.cpp  Shader.cpp  Skybox.cpp  Sun.cpp  Tank.cpp  Terrain.cpp  main.cpp
